added js files to code
added discount.js, and slice_pie1.js

--- a/Expressions_worksheet/index.html
+++ b/Expressions_worksheet/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="js/script.js"> </script>
     <script src="js/dog_years.js"> </script>
+    <script src="js/slice_pie1.js"> </script>
+    <script src="js/discount.js"> </script>
 </head>
 <body>
 
