added slice_pie_part2.js to html code on index.html

--- a/Expressions_worksheet/index.html
+++ b/Expressions_worksheet/index.html
@@ -6,6 +6,8 @@
     <script src="js/script.js"> </script>
     <script src="js/dog_years.js"> </script>
     <script src="js/slice_pie1.js"> </script>
+    <script src="js/slice_pie_part2.js"> </script>
+    <script src="js/shopping_bill.js"> </script>
     <script src="js/discount.js"> </script>
 </head>
 <body>
