added new js files to html code for index.html

--- a/Conditionals_Practice/index.html
+++ b/Conditionals_Practice/index.html
@@ -4,6 +4,8 @@
     <title>Conditionals Practice</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="js/script.js"> </script>
+    <script src="js/relational_express.js"> </script>
+    <script src="js/condition_express.js"> </script>
 </head>
 <body>
 
