added if_else.js file to index.html code

--- a/Conditionals_Practice/index.html
+++ b/Conditionals_Practice/index.html
@@ -6,6 +6,7 @@
     <script src="js/script.js"> </script>
     <script src="js/relational_express.js"> </script>
     <script src="js/condition_express.js"> </script>
+    <script src="js/if_else.js"> </script>
 </head>
 <body>
 
