added else_if.js file to index.html code

--- a/Conditionals_Practice/index.html
+++ b/Conditionals_Practice/index.html
@@ -7,6 +7,7 @@
     <script src="js/relational_express.js"> </script>
     <script src="js/condition_express.js"> </script>
     <script src="js/if_else.js"> </script>
+    <script src="js/else_if.js"> </script>
 </head>
 <body>
 
