added logical_operator.js file to index.html code

--- a/Conditionals_Practice/index.html
+++ b/Conditionals_Practice/index.html
@@ -8,6 +8,7 @@
     <script src="js/condition_express.js"> </script>
     <script src="js/if_else.js"> </script>
     <script src="js/else_if.js"> </script>
+    <script src="js/logical_operator.js"> </script>
 </head>
 <body>
 
