added last_chance.js file to index.html file

--- a/Conditionals_worksheet/index.html
+++ b/Conditionals_worksheet/index.html
@@ -4,6 +4,7 @@
     <title>Conditionals Worksheet</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="js/script.js"> </script>
+    <script src="js/last_chance.js"> </script>
 </head>
 <body>
 
