added movie_ticket.js to index.html file and commented out last_chance.js

--- a/Conditionals_worksheet/index.html
+++ b/Conditionals_worksheet/index.html
@@ -4,7 +4,9 @@
     <title>Conditionals Worksheet</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="js/script.js"> </script>
-    <script src="js/last_chance.js"> </script>
+    <!--<script src="js/last_chance.js"> </script>-->
+    <script src="js/grade_letter.js"> </script>
+    <script src="js/movie_ticket.js"> </script>
 </head>
 <body>
 
