--- a/Conditionals_Personal/index.html
+++ b/Conditionals_Personal/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Personal Conditionals</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <script src="js/script.js"> </script>
 </head>
 <body>
 
