--- a/Functions_practice/index.html
+++ b/Functions_practice/index.html
@@ -4,6 +4,8 @@
     <title>Functions Practice</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="js/basic.js"> </script>
+    <script src="js/invocation.js"> </script>
+    <script src="js/var_scope.js"> </script>
 </head>
 <body>
 
