added argument_parameter.js link to index.html

--- a/Functions_practice/index.html
+++ b/Functions_practice/index.html
@@ -6,6 +6,7 @@
     <script src="js/basic.js"> </script>
     <script src="js/invocation.js"> </script>
     <script src="js/var_scope.js"> </script>
+    <script src="js/argument_parameter.js"> </script>
 </head>
 <body>
 
