added funct_procedure.js link to index.html

--- a/Functions_practice/index.html
+++ b/Functions_practice/index.html
@@ -8,6 +8,7 @@
     <script src="js/var_scope.js"> </script>
     <script src="js/argument_parameter.js"> </script>
     <script src="js/return_values.js"> </script>
+    <script src="js/funct_procedure.js"> </script>
 </head>
 <body>
 
