added anonymous_funct.js link to index.html

--- a/Functions_practice/index.html
+++ b/Functions_practice/index.html
@@ -9,6 +9,7 @@
     <script src="js/argument_parameter.js"> </script>
     <script src="js/return_values.js"> </script>
     <script src="js/funct_procedure.js"> </script>
+    <script src="js/anonymous_funct.js"> </script>
 </head>
 <body>
 
